# Modified-ground-point-cloud-segmentation

./: README.md  config.rviz  调试记录
ground_seg/: CMakeLists.txt  package.xml
ground_seg/include/ground_seg/: bin.h  ground_segmentation.h  segment.h
ground_seg/src/: bin.cc  ground_segmentation.cc  segment.cc
ground_seg_ros/: CMakeLists.txt  package.xml
ground_seg_ros/launch/: segmentation.launch  segmentation_params.yaml
ground_seg_ros/src/: ground_segmentation_node.cc
